--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -2,13 +2,25 @@ html, body{
   margin: 0;
   padding: 0;
 }
+
+.navBar{
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
 .mainContainer{
   height: 100%;
   width: 100%;
   background-color: $basicBackground;
-  background: url(../img/back.png);
-
+  .viewContainer {
+    height: 100%;
+    width: 100%;
+  }
 }
-.homeContainer{
-  background: $basicBackground;
+
+.introContainer{
+  width: 100%;
+  height: 100%;
+  background: url(../img/back.png);
 }
