--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,26 +1,8 @@
-html, body{
-  margin: 0;
-  padding: 0;
-}
-
-.navBar{
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
-
-.mainContainer{
-  height: 100%;
-  width: 100%;
-  background-color: $basicBackground;
-  .viewContainer {
-    height: 100%;
-    width: 100%;
-  }
-}
-
 .introContainer{
-  width: 100%;
   height: 100%;
   background: url(../img/back.png);
+  md-content {
+    color: $white;
+    background: none;
+  }
 }
