Updated Readme and added some general files

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,7 +1,7 @@
 <section flex class="introContainer">
   <md-content flex layout-padding>
     <div layout="column" layout-fill layout-align="top center">
-    <h2 translate="TITLE"></h2>
+    <h2 translate="INTRODUCTION"></h2>
       <p>
       The left sidenav will 'lock open' on a medium (>=960px wide) device.
       </p>
