--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -19,7 +19,11 @@ main{
 }
 
 .langBtns{
+  span{
+    color: $white;
+  }
   position: fixed;
+  z-index: 10;
   top: 0;
   width: 250px;
   right: 0;
