--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -25,7 +25,16 @@ main{
   position: fixed;
   z-index: 10;
   top: 0;
-  width: 250px;
+  width: 300px;
   right: 0;
   text-align: right;
+}
+
+.menuBtn{
+  position: fixed;
+  width: 200px;
+  text-align: left;
+  top:0;
+  left: 0;
+  z-index: 10;
 }
