Added some translations and styles

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,8 +1,30 @@
 .introContainer{
   height: 100%;
+  width: 100%;
   background: url(../img/back.png);
   md-content {
     color: $white;
     background: none;
   }
+}
+
+.mainTitle{
+	font-family: $font;
+	text-align: center;
+	h1{
+		font-size: 2em;
+	}
+	h2{
+		font-size: 1.75em;
+    	font-style: italic;
+	}
+	img{
+		max-width: 250px;
+    	border-radius: 150px;
+	}
+	color: $white;
+}
+
+.summary{
+	color: $white;
 }
