--- a/src/views/home.html
+++ b/src/views/home.html
@@ -2,7 +2,7 @@
   <md-content flex layout-padding>
   <div layout="column" layout-fill layout-align="top center">
     <h1 translate="HOME.INFO.TITLE"></h1>
-    <md-card>
+<!--     <md-card>
       <md-card-header>
         <md-card-avatar>
           <img class="md-user-avatar" src="dist/img/beard.jpg">
@@ -33,7 +33,7 @@
           Card content
         </p>
       </md-card-content>
-    </md-card>
+    </md-card> -->
   </div>
   <div flex></div>
   </md-content>
