--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,6 +1,8 @@
 .introContainer{
   height: 100%;
-  background: url(../img/back.png);
+  background: url(../img/back-pers.jpg);
+  background-position: center; 
+  background-attachment: fixed;
   md-content {
     color: $white;
     background: none;
