--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,3 +7,6 @@ $black: #000000;
 $github: #BBBBBB;
 $facebook: #3b5998;
 $twitter: #55acee;
+$linkedin: #0077B5;
+$gplus: #c53929;
+$skype: #00AFF0;
