--- a/src/views/menu.html
+++ b/src/views/menu.html
@@ -9,7 +9,7 @@ md-whiteframe="4">
 <md-toolbar class="md-hue-2">
 <div class="md-toolbar-tools">
   <h2>
-  <span>{{'MENU' | translate}}</span>
+  <span>{{'general.menuTitle' | translate}}</span>
   </h2>
   <span flex></span>
   <md-button class="md-icon-button" ng-click="vm.close()">
@@ -26,7 +26,7 @@ md-whiteframe="4">
   </md-button>
 </div>
 <div class="md-list-item-text" layout="column" >
-  <h3>{{ 'GENERAL.MENUITEMS.' + menuItem.name  | translate}}</h3>
+  <h3>{{ 'general.menuitems.' + menuItem.name  | translate}}</h3>
 </div>
 <md-divider></md-divider>
 </md-list-item>
