--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,18 +1,30 @@
 .introContainer{
-  height: 100%;
-  width: 100%;
-  background: url(../img/back-pers.jpg);
-  background-position: center; 
-  background-attachment: fixed;
-  md-content {
-    color: $white;
-    background: none;
-  }
+  	@media screen and (min-width: $small) {
+  		background-position: center; 
+		background-attachment: fixed;
+  	}
+	min-height: 100vh;
+	display: flex;
+	background: url(../img/back-pers.jpg);
+	flex-direction: column;
+	justify-content: center;
+	.avatar{
+		height: 300px;
+		text-align: center;
+		img{
+			max-width: 250px;
+			border-radius: 150px;
+		}
+	}
+	.menuHomeBtn{
+		align-self:center;
+	}
 }
 
 .mainTitle{
 	font-family: $font;
 	text-align: center;
+	min-height: 185px;
 	h1{
 		font-size: 2em;
 	}
@@ -20,13 +32,24 @@
 		font-size: 1.75em;
     	font-style: italic;
 	}
-	img{
-		max-width: 250px;
-    	border-radius: 150px;
-	}
 	color: $white;
 }
 
 .summary{
 	color: $white;
+	 min-height: 275px;
+	@media screen and (max-width: $small) {
+	    width: 100%;
+  	}	
+  	@media screen and (min-width: $small) {
+	    width: 50%;
+	    align-self: center;
+  	}
+
 }
+
+  // width: 100%;
+  // md-content {
+  //   color: $white;
+  //   background: none;
+  // }
