--- a/src/views/home.html
+++ b/src/views/home.html
@@ -7,8 +7,8 @@
     <h2 translate="home.info.subTitle"></h2>
   </div>
   <div class="summary">
-    <p>{{"home.info.summary1" | translate}}</p>
-    <p>{{"home.info.summary2" | translate}}</p>
+    <div translate="home.info.summary1"></div>
+    <p translate="home.info.summary2"></p>
   </div>
   <div class="menuHomeBtn">
     <md-button class="md-raised md-primary" ng-click="vm.openMenu()">{{'general.btns.menuHome' | translate}}</md-button>
