--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,8 +3,6 @@
 
 $basicBackground: #353265;
 $white: #FFFFFF;
-//Fonts
-$font: 'Raleway', sans-serif;
 $black: #000000;
 $github: #BBBBBB;
 $facebook: #3b5998;
@@ -12,6 +10,10 @@ $twitter: #55acee;
 $linkedin: #0077B5;
 $gplus: #c53929;
 $skype: #00AFF0;
+$about: #21283b;
+
+//Fonts
+$font: 'Raleway', sans-serif;
 
 //media queries
 //small-screens
