--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,18 +1,16 @@
-.aboutContainer{
-	height: 100vh;
-	.title{
-		min-height: 500px;
-		width: 100%;
-		background: url(../img/paris.jpg);
-		background-position: center;
-		background-repeat: no-repeat;
-		background-color: $about;
-		color: $white;
-		background-position-y: -125px;
-	}
-	.content{
-		@media screen and (min-width: $small) {
-			max-width: 75%;
-		}
-	}
+.aboutContainer {
+    height: 100vh;
+
+    md-content {
+        .title {
+            min-height: 500px;
+            width: 100%;
+            background: url(../img/paris.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: $about;
+            color: $white;
+            background-position-y: -125px;
+        }
+    }
 }
