--- a/src/views/about.html
+++ b/src/views/about.html
@@ -1,8 +1,8 @@
-<div class="aboutContainer" layout="column" layout-align="center center">
-	<div class="title" layout-padding layout="column" layout-align="center center">
+<div class="aboutContainer" layout="column" layout-align="start center">
+	<md-content class="content">
+	<div class="title" layout="column" layout-align="center center">
 		<h1 class="md-display-3">{{'about.title' | translate}}</h1>
 	</div>
-  <md-content class="content" flex layout-padding>
-  	<div translate="about.text"></div>
-  </md-content>
+		<div flex translate="about.text"></div>
+	</md-content>
 </div>
