--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -10,9 +10,11 @@
 		color: $white;
 		background-position-y: -125px;
 	}
-	.content{
-		@media screen and (min-width: $small) {
-			max-width: 75%;
+
+	md-content{
+		.text-container{
+			width: 75%;
+			margin: 0 auto;
 		}
 	}
 }
