--- a/src/views/about.html
+++ b/src/views/about.html
@@ -1,8 +1,26 @@
-<div class="aboutContainer" layout="column" layout-align="start center">
+<!-- <div class="aboutContainer" layout="column" layout-align="start center">
 	<md-content class="content">
 	<div class="title" layout="column" layout-align="center center">
 		<h1 class="md-display-3">{{'about.title' | translate}}</h1>
 	</div>
 		<div flex translate="about.text"></div>
 	</md-content>
-</div>
+</div> -->
+
+<article flex layout="column">
+  <div class="parallax">
+    <div class="bg_about" layout-align="center center">
+      <h1 class="md-display-3" translate="about.title"></h1>
+    </div>
+    
+  </div>
+  <section>
+    <div class="text-container">
+      <h2 translate="about.whoTitle"></h2>
+      <p translate="about.whoText"></p>      
+      <h2 translate="about.whatTitle"></h2>
+      <p translate="about.whatText"></p>
+
+    </div>
+  </section>
+</article>
