--- a/src/views/about.html
+++ b/src/views/about.html
@@ -6,3 +6,14 @@
 		<div flex translate="about.text"></div>
 	</md-content>
 </div>
+
+<div>
+  <div layout="row">
+    <div flex>First item in row</div>
+    <div flex="20">Second item in row</div>
+  </div>
+  <div layout="column">
+    <div flex="66">First item in column</div>
+    <div flex="33">Second item in column</div>
+  </div>
+</div>
