--- a/src/views/about.html
+++ b/src/views/about.html
@@ -7,20 +7,25 @@
 	</md-content>
 </div> -->
 
-<article flex layout="column">
+<section flex layout="column">
   <div class="parallax">
     <div class="bg_about" layout-align="center center">
       <h1 class="md-display-3" translate="about.title"></h1>
     </div>
     
   </div>
-  <section>
-    <div class="text-container">
+  <article class="text-container">
+<!--     <div class="text-container">
       <h2 translate="about.whoTitle"></h2>
       <p translate="about.whoText"></p>      
       <h2 translate="about.whatTitle"></h2>
       <p translate="about.whatText"></p>
 
-    </div>
-  </section>
-</article>
+    </div> -->
+    <p>
+
+    </p>
+  </article>
+</section>
+
+
