--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -36,7 +36,7 @@
     }
 }
 
-article {
+section {
      @media screen and (max-width: $small) {
         .text-container {
             width: 95vw;
